# meme-bingo-web

./: Cargo.toml  index.html  package.json  playwright.config.js  playwright.config.ts  run.sh
src/: main.rs
static/: global.css  robots.txt
style/: global.css
templates/: base.html  edit.html  index.html  new.html  samples.html
tests-js/: browser.spec.js  browser.spec.ts
