[package]
name = "meme-bingo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
actix-web-lab = "0.19.1"
base64 = "0.21.3"
rand = "0.8.5"
serde = { version = "1.0.186", features = ["derive"] }
tera = { version = "1.19.1", default-features = false }
