[package]
name = "meme-bingo-web"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-lab = "0.22.0"
base64 = "0.22.1"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
